# stepbystep-robotics

./: .gitignore  README.md  move_to_desktop.sh  pyproject.toml  requirements.txt
.kiro/specs/stepbystep-direct/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/stepbystep-robotics/: .config.kiro  design.md  requirements.md  tasks.md
STEPBYSTEP DIRECT/: JESSE_DIRECTIONS_SUMMARY.md  QUICKSTART.md  README.md  WEBSITE_INSTRUCTIONS.md  aws-iam-policy.json  build_website.py  example_render.sh  jesse_all_directions_comparison.txt  render_all_remaining.sh  render_remaining_shots.py  requirements.txt  resolve_storyboard.py  serve.py  simple-test.html  test.html  website.html
STEPBYSTEP DIRECT/src/frontend/: stepbystep-direct.jsx
STEPBYSTEP DIRECT/src/pipeline/: bedrock_client.py  cli.py  stepbystep_render.py  video_processor.py
STEPBYSTEP DIRECT/src/shared/: resolve_direction.js  storyboard_schema.js  themes.js
STEPBYSTEP DIRECT/src/storyboards/: changeless.json  jesse.json  robotics-yoga-mirror.json
src/stepbystep_robotics/: __init__.py  models.py  workflows.py
src/stepbystep_robotics/behavior/: __init__.py  (+2 more)
tests/: __init__.py  test_action_translator.py  test_complete_workflow.py  test_evaluation_engine.py  test_execution_tracker.py  test_failure_handling.py  test_governance_system.py  test_improvement_pipeline.py  test_models.py  test_models_properties.py  test_regression_detector.py  test_runbook_manager.py  test_safety_enforcement.py  test_state_normalization.py  test_state_observer.py  test_task_execution.py  test_task_spec_engine.py
(+10 files in other folders)
